# Fullstack-Template-Lite

./: .gitignore  README.md  todo.md
backend/: .dockerignore  Dockerfile  alembic.ini  deploy.sh  docker-compose.yml  init.py  pyproject.toml  readme.md  requirements.txt  run.py
backend/.agents/: CLEAN_CODE.MD
backend/.agents/rules/: codestyle.md
backend/alembic/: env.py
backend/alembic/versions/: 1fa902202afd_init.py
backend/app/: __main__.py  admin.py  db.py
backend/app/api/: dependencies.py  router.py
backend/app/api/v1/: health.py
backend/app/api/v1/auth/: __init__.py  common.py  google.py  login.py  password.py  register.py
backend/app/core/: config.py  errors.py  exceptions.py  lifespan.py  logging.py  middleware.py  ratelimiting.py
backend/app/domain/enums/: __init__.py  tokens.py
backend/app/domain/models/: __init__.py  blacklist_tokens.py  users.py
backend/app/domain/schemas/: __init__.py
backend/app/domain/schemas/request/: __init__.py  auth.py
backend/app/domain/schemas/response/: __init__.py  auth.py  base.py
backend/app/integrations/: __init__.py  mail.py
backend/app/repository/: __init__.py  blacklist_tokens.py  user.py
backend/app/service/: __init__.py  auth.py  blacklist_tokens.py  google_auth.py
backend/app/utils/: __init__.py  auth.py
backend/app/workers/: __init__.py  celery_app.py
backend/app/workers/tasks/: __init__.py  email_tasks.py
backend/secrets/: dev.config.yaml  sample.yaml
frontend/: .sample.env  README.md  package-lock.json
frontend/src/app/: layout.tsx
frontend/src/config/: index.ts
